--- a/App/src/index.css
+++ b/App/src/index.css
@@ -6,18 +6,18 @@ Variables
 
 :root {
   /* dark shades of primary color*/
-  --clr-primary-1: hsl(22, 28%, 21%);
-  --clr-primary-2: hsl(22, 28%, 29%);
-  --clr-primary-3: hsl(22, 28%, 37%);
-  --clr-primary-4: hsl(22, 28%, 45%);
+  --clr-primary-1: #1a2f4b;
+  --clr-primary-2: #2a4b76;
+  --clr-primary-3: #3e6fb0;
+  --clr-primary-4: #4579bd;
   /* primary/main color */
-  --clr-primary-5: hsl(22, 31%, 52%);
+  --clr-primary-5: #5383c2;
   /* lighter shades of primary color */
-  --clr-primary-6: hsl(22, 31%, 60%);
-  --clr-primary-7: hsl(22, 31%, 67%);
-  --clr-primary-8: hsl(20, 31%, 74%);
-  --clr-primary-9: hsl(22, 31%, 81%);
-  --clr-primary-10: hsl(22, 31%, 88%);
+  --clr-primary-6: #7098cc;
+  --clr-primary-7: #8dadd7;
+  --clr-primary-8: #aac2e1;
+  --clr-primary-9: #c7d7eb;
+  --clr-primary-10: #e4ecf6;
   /* darkest grey - used for headings */
   --clr-grey-1: hsl(209, 61%, 16%);
   --clr-grey-2: hsl(211, 39%, 23%);
@@ -31,10 +31,10 @@ Variables
   --clr-grey-9: hsl(212, 33%, 89%);
   --clr-grey-10: hsl(210, 36%, 96%);
   --clr-white: #fff;
-  --clr-red-dark: hsl(360, 67%, 44%);
-  --clr-red-light: hsl(360, 71%, 66%);
-  --clr-green-dark: hsl(125, 67%, 44%);
-  --clr-green-light: hsl(125, 71%, 66%);
+  --clr-red-dark: #bd4d45;
+  --clr-red-light: #dca09c;
+  --clr-green-dark: #256d75;
+  --clr-green-light: #4ab9c6;
   --clr-black: #222;
   --transition: all 0.3s linear;
   --spacing: 0.1rem;
@@ -58,7 +58,7 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background: var(--clr-white);
   color: var(--clr-grey-1);
@@ -140,6 +140,10 @@ p {
   width: 90vw;
   margin: 0 auto;
   max-width: var(--max-width);
+}
+
+.section-center h1 {
+  line-height: 1.2;
 }
 
 @media screen and (min-width: 992px) {
